fixed the splash screen so it does not put text on new line on small screens (phones)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,7 +9,7 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 80px;
+    height: 100%;
 }
 
 
@@ -35,13 +35,17 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: #ffffff;
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 0.4rem;
 }
 
 .logo {
     position: relative;
-    /*display: inline-block;*/
+    white-space: nowrap;
     bottom: -20px;
     opacity: 0;
+    width: 50%;
 }
 
 .logo.active {
